# text-to-sql-demo

./: .env.example  .gitignore  CLAUDE.md  DOCUMENTATION.md  Makefile  PRESENTATION.html  azure-pipelines.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base_graph.py  credit_sql_agent.py  fraud_sql_agent.py  sentiment_agent.py  speech_agent.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/evals/: dataset.py  harness.py  metrics.py
backend/app/rag/: __init__.py  embedder.py  parser.py  store.py
backend/app/routers/: __init__.py  _agent_utils.py  credit_sql.py  documents.py  fraud_sql.py  overview.py  realtime.py  sentiment.py  speech.py  unified.py
backend/tests/: conftest.py  test_api_endpoints.py  test_data_generators.py  test_sql_tools.py
data/: seed_db.py
data/synthetic/: generate_credit_data.py  generate_fraud_data.py  generate_social_data.py  generate_speech_transcripts.py
docs/: architecture-visual.html  power-prompts.html  production-vision.html  routing-vs-isolated.html  system-blueprint.html  turnover-squad-pitch.html
frontend/: Dockerfile  api_client.py  app.py  requirements.txt
frontend/components/: eval_badge.py
frontend/pages/: 1_Credit_SQL.py  2_Fraud_SQL.py  3_Sentiment_Analysis.py  4_Speech_Insights.py
infra/docker/: docker-compose.yml
infra/k8s/: backend-deployment.yaml  deployments.yaml  secrets.yaml
nedcard-ui/: index.html  package-lock.json  package.json  tailwind.config.ts
nedcard-ui/src/: App demo.tsx  App.tsx  index.css
(+28 files in other folders)
