[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "text-to-sql-demo"
version = "0.1.0"
description = "Multi-agent LLM demo: Text-to-SQL, Fraud Analysis, Sentiment & Speech Insights"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM", "TID"]
ignore = ["E501"]
exclude = ["migrations", "__pycache__"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "frontend/tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
